feat: update environmental classification and add get boleta detail endpoint
- Changed enum values for BoletaTipoAmbiental from AMARILLA and ROJA to AMARILLO and ROJO.
- Updated default value for TipoAmbiental in Boletas model.
- Implemented new controller function to retrieve boleta details.
- Added new schema for validating boletaId in request parameters.
- Enhanced repository to include specific fields for items and tienda when fetching boleta by ID.
- Created new service function to process and return detailed boleta information.
- Updated router to include the new GET endpoint for fetching boleta details.
- Added new schemas for ProductoDetalle and DetalleBoletaResponse in schemas file.
- Updated OpenAPI and JSON specifications to reflect the new endpoint and response structure.
- Adjusted TypeScript configuration for improved performance and type checking.
- Added .vscodeignore file to exclude unnecessary files from the VSCode workspace.
